--- a/.github/workflows/docker-publish-pg2pg.yml
+++ b/.github/workflows/docker-publish-pg2pg.yml
@@ -4,9 +4,9 @@ on:
   # schedule:
     # - cron: '19 22 * * *'
   push:
-    branches: [ "main" ]
+    branches: [ "pg2pg_replication" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "pg2pg_replication" ]
 
 env:
   REGISTRY: ghcr.io
